<package>
  <name>willow_maps</name>
  <version>1.0.1</version>
  <description>Holds maps of Willow Garage that can be used for a number of different applications.</description>
  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>

  <license>BSD</license>

  <url type="website">http://pr.willowgarage.com/wiki/willow_maps</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Eitan Marder-Eppstein</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>
