<package>
  <name>pr2_mechanism_msgs</name>
  <version>1.8.1</version>
  <description>
     This package defines services that are used to communicate with
     the realtime control loop. It also defines messages
     that represent the state of the realtime controllers, the joints
     and the actuators.
  </description>
  <maintainer email="wim@hidof.com">Wim Meeussen</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/pr2_mechanism_msgs</url>
  <author email="sglaser@willowgarage.com">Stuart Glaser</author>
  <author email="wim@hidof.com">Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
