<?xml version="1.0"?>
<package>
  <name>pr2_tuck_arms_action</name>
  <version>0.0.9</version>
  <description>The pr2_tuck_arms_action package</description>

 <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pr2_tuck_arms_action</url>
  <author>Wim Meeussen</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>pr2_common_action_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>pr2_common_action_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>trajectory_msgs</run_depend>


  <export>
  </export>
</package>
